2006-12-22 Markus Schaber <schabi@logix-tt.com>

        * java/jdbc/Makefile
          Added generation of basic javadoc zip file.

2006-12-20 Sandro Santilli <strk@refractions.net>

	* regress/README: wrote info about adding regression tests

2006-12-20 Kevein Neufeld <kneufeld@refractions.net>

	* lwgeom/lwgeom_gist.c
	  Added fix to permit gist indexes to have more than 459 null
	  geometries in a table

2006-12-15 Markus Schaber <schabi@logix-tt.com>

        * java/jdbc/Makefile
          Fixed Makefile for jts tests, commented debug options better
          
        * java/jdbc/jtssrc/org/postgis/jts/JtsBinaryWriter.java 
          Fix multi-dimension handling in JtsBinaryWriter, thanks to 
          Thomas Marti for the hints
          
        * java/jdbc/jtssrc/examples/JtsTestParser.java
          Improved SRID handling in regression tests and added 
          CoordinateArraySequence tests.

2006-12-15 Eduin Carrillo <yecarrillo@yahoo.com>

	* lwgeom/lwgeom_transform.c:
	  short circuit when source and target SRID are the same.

2006-12-15 Eduin Carrillo <yecarrillo@yahoo.com>

	* lwgeom/: Makefile, lwgeom_kml.c, lwpostgis.sql.in:
	  New AsKML() function
	* doc/postgis.xml: document new AsKML function.


2006-12-13 Markus Schaber <schabi@logix-tt.com>

	* README.postgis
          Fixed "hard upgrade" instructions.

---------  PostGIS-1.2.0 release [2006-12-08] --------------------------

2006-12-05 Mark Leslie <mleslie@refractions.net>

	* doc/postgis.xml:
	  Added sections for the SQL-MM and ArcSDE function ports.

2006-12-05 Kevin Neufeld <kneufeld@refractions.net>

	* Added sqlmm.sql.in: ESRI's ArcSDE subset of SQL/MM functions
	* Moved common sql defines to their own header file.

2006-12-01 Mark Leslie <mleslie@refractions.net>

	* lwgeom/lwcompound.c, lwgeom/lwcurve.c, lwgeom/lwmsurface.c,
	  lwgeom/lwmcurve.c, lwgeom/lwcurvepoly.c:
	  Added serialize/deserialize support for curved geometries.
	* lwgeom/liblwgeom.h: