@@ -380,8 +380,7 @@
           <para>Soft upgrade consists of sourcing the lwpostgis_upgrade.sql
           script in your spatial database:</para>
 
-          <programlisting>psql -f lwpostgis_upgrade.sql -d
-          your_spatial_database</programlisting>
+          <programlisting>$ psql -f lwpostgis_upgrade.sql -d your_spatial_database</programlisting>
 
           <para>If a soft upgrade is not possible the script will abort and
           you will be warned about HARD UPGRADE being required, so do not
@@ -393,8 +392,7 @@
             generate that file by yourself. This is done with the following
             command:</para>
 
-            <programlisting>utils/postgis_proc_upgrade.pl lwpostgis.sql &#62;
-            lwpostgis_upgrade.sql</programlisting>
+            <programlisting>$ utils/postgis_proc_upgrade.pl lwpostgis.sql &#62; lwpostgis_upgrade.sql</programlisting>
           </note>
         </sect3>
 
@@ -413,33 +411,64 @@
           output to a file will help in case of problems. The procedure is as
           follow:</para>
 
-          <programlisting># Create a &#34;custom-format&#34; dump of the
-          database you want # to upgrade (let&#39;s call it &#34;olddb&#34;) $
-          pg_dump -Fc olddb &#62; olddb.dump # Restore the dump contextually
-          upgrading postgis into # a new database. The new database
-          doesn&#39;t have to exist. # postgis_restore accepts createdb
-          parameters after the dump # file name, and that can for instance be
-          used if you are using # a non-default character encoding for your
-          database. # Let&#39;s call it &#34;newdb&#34;, with UNICODE as the
-          character encoding: $ sh utils/postgis_restore.pl lwpostgis.sql
-          newdb olddb.dump -E=UNICODE &#62; restore.log # Check that all
-          restored dump objects really had to be restored from dump # and do
-          not conflict with the ones defined in lwpostgis.sql $ grep ^KEEPING
-          restore.log | less # If upgrading from PostgreSQL &#60; 8.0 to
-          &#62;= 8.0 you might want to # drop the attrelid, varattnum and
-          stats columns in the geometry_columns # table, which are no-more
-          needed. Keeping them won&#39;t hurt. # !!! DROPPING THEM WHEN REALLY
-          NEEDED WILL DO HURT !!!! $ psql newdb -c &#34;ALTER TABLE
-          geometry_columns DROP attrelid&#34; $ psql newdb -c &#34;ALTER TABLE
-          geometry_columns DROP varattnum&#34; $ psql newdb -c &#34;ALTER
-          TABLE geometry_columns DROP stats&#34; # spatial_ref_sys table is
-          restore from the dump, to ensure your custom # additions are kept,
-          but the distributed one might contain modification # so you should
-          backup your entries, drop the table and source the new one. # If you
-          did make additions we assume you know how to backup them before #
-          upgrading the table. Replace of it with the new one is done like
-          this: $ psql newdb newdb=&#62; delete from spatial_ref_sys; DROP
-          newdb=&#62; \i spatial_ref_sys.sql</programlisting>
+          <para>
+	  Create a &#34;custom-format&#34; dump of the database you want
+	  to upgrade (let&#39;s call it &#34;olddb&#34;)
+	  </para>
+
+	<programlisting>
+$ pg_dump -Fc olddb &#62; olddb.dump
+	</programlisting>
+
+	<para>
+Restore the dump contextually upgrading postgis into a new database. The
+new database doesn&#39;t have to exist.  postgis_restore accepts createdb
+parameters after the dump file name, and that can for instance be used
+if you are using a non-default character encoding for your database.
+Let&#39;s call it &#34;newdb&#34;, with UNICODE as the character encoding:
+	</para>
+
+	  <programlisting>
+$ sh utils/postgis_restore.pl lwpostgis.sql newdb olddb.dump -E=UNICODE &#62; restore.log
+	  </programlisting>
+
+	<para>
+Check that all restored dump objects really had to be restored from dump 
+and do not conflict with the ones defined in lwpostgis.sql
+	</para>
+
+	<programlisting>
+$ grep ^KEEPING restore.log | less
+	</programlisting>
+
+	<para>
+If upgrading from PostgreSQL &#60; 8.0 to &#62;= 8.0 you might want to
+drop the attrelid, varattnum and stats columns in the geometry_columns
+table, which are no-more needed. Keeping them won&#39;t hurt.
+	DROPPING THEM WHEN REALLY NEEDED WILL DO HURT !
+	</para>
+
+	<programlisting>
+$ psql newdb -c &#34;ALTER TABLE geometry_columns DROP attrelid&#34;
+$ psql newdb -c &#34;ALTER TABLE geometry_columns DROP varattnum&#34;
+$ psql newdb -c &#34;ALTER TABLE geometry_columns DROP stats&#34;
+	</programlisting>
+
+	<para>
+spatial_ref_sys table is restore from the dump, to ensure your custom
+additions are kept, but the distributed one might contain modification so
+you should backup your entries, drop the table and source the new one. If
+you did make additions we assume you know how to backup them before
+upgrading the table. Replace of it with the new one is done like this:
+	</para>
+
+	<programlisting>
+$ psql newdb
+newdb=&#62; delete from spatial_ref_sys;
+DROP
+newdb=&#62; \i spatial_ref_sys.sql
+	</programlisting>
+
         </sect3>
       </sect2>
 
