@@ -1,3 +1,8 @@
+2006-12-29 Sandro Santilli <strk@refractions.net>
+
+	* doc/postgis.xml: cleaned up Hard Upgrade section
+	  (was unreadable).
+
 2006-12-22 Markus Schaber <schabi@logix-tt.com>
 
         * java/jdbc/Makefile
